==> akhil-tsdev/With_SensorFusion/wearable/nordic_yoga/turing_yoga_pant/components/drivers_mpu_lsm/mpu9250.c <==
#include <math.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdio.h>
#include <string.h>
#include "sat_module.h"
#include "nrf_delay.h"
#include "nrf_drv_spi.h"
#include "app_error.h"
#include "app_uart.h"
#include "nrf_uart.h"
#include "mpu9250_firmware.h"
#include "mpu9250_ossf.h"
#include "tasks.h"
#  define FCHOICE_B 0
#  define DPLF_CFG 6
#  define FCHOICE_B 0
#  define DPLF_CFG 5
#  define FCHOICE_B 0
#  define DPLF_CFG 4
#  define FCHOICE_B 0
#  define DPLF_CFG 3
#  define FCHOICE_B 0
#  define DPLF_CFG 2
#  define FCHOICE_B 0
#  define DPLF_CFG 1
#  define GYRO_FS_SEL 0
#  define GYRO_FS_SEL 1
#  define GYRO_FS_SEL 2
#  define GYRO_FS_SEL 3
#  define ACCEL_FCHOICE_B 0
#  define A_DPLF_CFG 6
#  define ACCEL_FCHOICE_B 0
#  define A_DPLF_CFG 5
#  define ACCEL_FCHOICE_B 0
#  define A_DPLF_CFG 4
#  define ACCEL_FCHOICE_B 0
#  define A_DPLF_CFG 3
#  define ACCEL_FCHOICE_B 0
#  define A_DPLF_CFG 2
#  define ACCEL_FCHOICE_B 0
#  define A_DPLF_CFG 1
#  define ACCEL_FS_SEL 0
#  define ACCEL_FS_SEL 1
#  define ACCEL_FS_SEL 2
#  define ACCEL_FS_SEL 3
#define MAG_SUBSAMPLE 1
#define MAG_SUBSAMPLE (GYRO_ACCEL_RATE/MAG_RATE)
#define BUFFER_SIZE 65

void write_reg(uint8_t reg_addr, uint8_t data)
{
	
	mts_buffer[0] = reg_addr;
	mts_buffer[1] = data;
	mpu9250_set_csn(mpu9250_num);
	nrf_delay_us(80); // CT --  This delay needed is around 15us not 1 ms.
	APP_ERROR_CHECK(nrf_drv_spi_transfer(&spi, mts_buffer, 2, stm_buffer, 2));
	nrf_delay_us(80);// CT --  This delay needed is around 15us not 1 ms.
	mpu9250_set_csn(0);
	
}

void read_regs(uint8_t reg_addr, size_t count, uint8_t *data)
{
	
	mts_buffer[0] = 0x80 | reg_addr;
	memset(& mts_buffer[1], 0, count);  // not really necessary
	memset(stm_buffer, 0, count+1); // also not really necessary
	
	mpu9250_set_csn(mpu9250_num);
	nrf_delay_us(80);               // CT --  This delay needed is around 15us not 1 ms.
	APP_ERROR_CHECK(nrf_drv_spi_transfer(&spi, mts_buffer, count + 1, stm_buffer, count + 1));
	nrf_delay_us(80);               //  CT --  This delay needed is around 15us not 1 ms.
	mpu9250_set_csn(0);

	memcpy(data, &stm_buffer[1], count);
}

void mpu9250_init() {

	/* Init SPI based on CS0 */
	mpu9250_init_all_pins();
	mpu9250_init_regs();
}
