==> akhil-tsdev/With_SensorFusion/wearable/nordic_module/diag/spi/ts_radio_dtm/common_code/mpu9250_hw/mpu9250.c <==
#include <math.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdio.h>
#include <string.h>
#include "fsl_dspi_master_driver.h"
#include "fsl_dspi_shared_function.h"
#include "fsl_gpio_common.h"  /* not needed with KSDK 1.1.0 ? */
#include "fsl_interrupt_manager.h"
#include "fsl_os_abstraction.h"
#define DSPI_DRV_MasterTransferBlocking DSPI_DRV_MasterTransferDataBlocking  /* fn name changed in KSDK 1.1.0 */
#include "board.h"
#include "sat_module.h"
#include "mpu9250_firmware.h"
#include "mpu9250_ossf.h"
#  define FCHOICE_B 0
#  define DPLF_CFG 6
#  define FCHOICE_B 0
#  define DPLF_CFG 5
#  define FCHOICE_B 0
#  define DPLF_CFG 4
#  define FCHOICE_B 0
#  define DPLF_CFG 3
#  define FCHOICE_B 0
#  define DPLF_CFG 2
#  define FCHOICE_B 0
#  define DPLF_CFG 1
#  define GYRO_FS_SEL 0
#  define GYRO_FS_SEL 1
#  define GYRO_FS_SEL 2
#  define GYRO_FS_SEL 3
#  define ACCEL_FCHOICE_B 0
#  define A_DPLF_CFG 6
#  define ACCEL_FCHOICE_B 0
#  define A_DPLF_CFG 5
#  define ACCEL_FCHOICE_B 0
#  define A_DPLF_CFG 4
#  define ACCEL_FCHOICE_B 0
#  define A_DPLF_CFG 3
#  define ACCEL_FCHOICE_B 0
#  define A_DPLF_CFG 2
#  define ACCEL_FCHOICE_B 0
#  define A_DPLF_CFG 1
#  define ACCEL_FS_SEL 0
#  define ACCEL_FS_SEL 1
#  define ACCEL_FS_SEL 2
#  define ACCEL_FS_SEL 3
#define MAG_SUBSAMPLE 1
#define MAG_SUBSAMPLE (GYRO_ACCEL_RATE/MAG_RATE)
#define BUFFER_SIZE 65

static void write_reg(uint8_t reg_addr, uint8_t data)
{
	dspi_status_t Error;
	mts_buffer[0] = reg_addr;
	mts_buffer[1] = data;
	Error = DSPI_DRV_MasterTransferBlocking(kMpu9250SpiInstance,
											& mpu9250_dspi_device,
											mts_buffer,
											stm_buffer,
											2,
											1000);
}

static void read_regs(uint8_t reg_addr, size_t count, uint8_t *data)
{
	dspi_status_t Error;
	mts_buffer[0] = 0x80 | reg_addr;
	memset(& mts_buffer[1], 0, count);  // not really necessary
	memset(stm_buffer, 0, count+1); // also not really necessary
	Error = DSPI_DRV_MasterTransferBlocking(kMpu9250SpiInstance,
											& mpu9250_dspi_device,
											mts_buffer,
											stm_buffer,
											count + 1,
											1000);
	memcpy(data, & stm_buffer[1], count);
}

bool mpu9250_init(void)
{
	int resulting_compass_rate;
	running = false;
	self_test = false;
	data_avail = false;

#if DO_TEMP_COMP
	for (int axis = X; axis <= Z; axis++)
	{
		// Getting suitable temperature compensation
		// scale factors will require calibrating the
		// device at two temperatures and using
		// linear regression.  It would be desirable
		// to calibrate and the minimum and maximum
		// expected operating temperature. It would be
		// even better to calibrate at more than two
		// temperatures and do a least-squares curve
		// fit, requiring more coefficients than this
		// code currently uses.
		gyro_temp_comp[axis].offset = 0.0;
		gyro_temp_comp[axis].scale = 0.0;
		accel_temp_comp[axis].offset = 0.0;
		accel_temp_comp[axis].scale = 0.0;
	}
#endif

	if (! mpu9250_configure_spi())
	{
		//printf ("error configuring SPI\r\n");
		return false;
	}

	PORT_HAL_SetMuxMode(g_portBaseAddr[GPIO_EXTRACT_PORT(mpu9250_int_pin.pinName)],
						GPIO_EXTRACT_PIN(mpu9250_int_pin.pinName),
						kPortMuxAsGpio);
	GPIO_DRV_InputPinInit(& mpu9250_int_pin);
	GPIO_DRV_OutputPinInit(& mpu9250_ss_pin);
	GPIO_DRV_OutputPinInit(& mpu9250_mosi_pin);

#if 1
	write_reg(MPU9250_REG_INT_PIN_CFG,        0xb0);  // int active low, push-pull, latched, cleared by any read
    												  //    FSYNC pin does not cause interrupt, no I2C bypass
#else
	write_reg(MPU9250_REG_INT_PIN_CFG,        0x80);  // int active low, push-pull, 50 us pulse, cleared by reading INT_STATUS
    												  //    FSYNC pin does not cause interrupt, no I2C bypass
#endif
	write_reg(MPU9250_REG_INT_ENABLE,         0x00);  // disable all interrupts
	GPIO_DRV_InputPinInit(& mpu9250_int_pin);

	write_reg(MPU9250_REG_SIGNAL_PATH_RESET,  0x07);  // signal path reset = gyro_rst + accel_rst + tmp_rst
	write_reg(MPU9250_REG_USER_CTRL,          0x07);  // fifo_rst + i2c_mst_rst + sig_cond_rst
								 	 	 	 	 	  // fifo_rst and i2c_mst_rst auto-clear after one clock cycle
													  // sig_cond_rst might also auto-clear; doc is unclear
	OSA_TimeDelay(10);
	write_reg(MPU9250_REG_SIGNAL_PATH_RESET,  0x00);  // clear signal path reset

	write_reg(MPU9250_REG_I2C_SLV0_CTRL,      0x00);  // disable
	write_reg(MPU9250_REG_I2C_SLV1_CTRL,      0x00);  // disable
	write_reg(MPU9250_REG_I2C_SLV2_CTRL,      0x00);  // disable
	write_reg(MPU9250_REG_I2C_SLV3_CTRL,      0x00);  // disable
	write_reg(MPU9250_REG_I2C_SLV4_CTRL,      0x00);  // disable
	write_reg(MPU9250_REG_USER_CTRL,          0x20);  // I2C_MST_EN

	write_reg(MPU9250_REG_SMPLRT_DIV,         SMPLRT_DIV);  // sample rate divisor = 10, so 100 Hz output
	write_reg(MPU9250_REG_CONFIG,             0x00 | DPLF_CFG);  // FIFO_MODE disabled, EXT_SYNC_SET disabled, DPLF_CFG
	write_reg(MPU9250_REG_GYRO_CONFIG,        (GYRO_FS_SEL<<3) | FCHOICE_B);  // gyro self-test disabled, all axes
	write_reg(MPU9250_REG_ACCEL_CONFIG,       ACCEL_FS_SEL<<3);  // accel self-test disabled, all axes
	write_reg(MPU9250_REG_ACCEL_CONFIG2,      (ACCEL_FCHOICE_B<<3) | A_DPLF_CFG);
	write_reg(MPU9250_REG_PWR_MGMT_1,         0x00);  // PWR_MGMT_1 = 0

#if MAG_SUBSAMPLE != 1
	write_reg(MPU9250_REG_I2C_SLV4_CTRL,      (MAG_SUBSAMPLE-1));  // I2C_MST_DLY: only read every nth sample
	write_reg(MPU9250_REG_I2C_MST_DELAY_CTRL, 0x81);  // DELAY_ES_SHADOW | I2C_SLV0_DLY_EN
#else
	write_reg(MPU9250_REG_I2C_SLV4_CTRL,      0x00);  // I2C_MST_DLY: read every sample
	write_reg(MPU9250_REG_I2C_MST_DELAY_CTRL, 0x80);  // DELAY_ES_SHADOW
#endif

	write_reg(MPU9250_REG_I2C_MST_CTRL,       0x10);  // not MULT_MST_EN, !WAIT_FOR_ES, !SLV_3_FIFO_EN, I2C_MST_P_NSR, I2C_MST_CLK = 348 kHz

	write_mag_reg(AK8963_REG_CNTL1,           0x0f);  // enter fuse access mode
	ak8963_sensitivity_cal[X] = read_mag_reg(AK8963_REG_ASAX);
	ak8963_sensitivity_cal[Y] = read_mag_reg(AK8963_REG_ASAY);
	ak8963_sensitivity_cal[Z] = read_mag_reg(AK8963_REG_ASAZ);
	write_mag_reg(AK8963_REG_CNTL1,           0x00);  // power-down, necessary to exit fuse access mode

	/* WARNING: sample rate bigger than 100 Hz is NOT supported!!
	 * If you set TS_MAG_RATE to something bigger than 100 Hz, it should generate compile error.
	 * In the case it doesn't generate compile error, it will set to 100 Hz here.
	 */
	if (mag_rate >= 100) {
		write_mag_reg(AK8963_REG_CNTL1,           0x16);  // BIT (16-bit), continuous mode 2 (100 Hz)
	} else if (mag_rate == 8) {
		write_mag_reg(AK8963_REG_CNTL1,           0x12);  // BIT (16-bit), continuous mode 1 (8 Hz)
	} else {
		/* Result is not guaranteed! */
		mpu9250_set_compass_sample_rate(mag_rate);
	}

	write_reg(MPU9250_REG_USER_CTRL,          0x00);  // !I2C_MST_EN

	return true;
}
